fixed table deadline, name alignment, sorting, assignees

--- a/src/styles/dashboardStyle.css
+++ b/src/styles/dashboardStyle.css
@@ -57,8 +57,9 @@ body {
 	padding: 20px;
 	background-color: #3a3a3a;
 	border-radius: 10px;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 	overflow-x: hidden;
+	justify-content: center;
 
 	.rdt_TableHeader,
 	.rdt_Table,
